@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,6,613
-#define PRODUCTVER     0,3,6,613
-#define STRFILEVER     _T("0.3.6.613")
-#define STRPRODUCTVER  _T("0.3.6.613")
-#define STRPRODUCTDATE  _T("2009-05-03")
+#define FILEVER        0,3,6,660
+#define PRODUCTVER     0,3,6,660
+#define STRFILEVER     _T("0.3.6.660")
+#define STRPRODUCTVER  _T("0.3.6.660")
+#define STRPRODUCTDATE  _T("2009-05-14")
 #endif // AUTOBUILD_H
