@@ -107,7 +107,7 @@ project master
 	;
 
 make $(target).exe.manifest : NSClient++.manifest : common.copy ;
-explicit $(target).manifest ;
+explicit $(target).exe.manifest ;
 
 
 exe $(target)
@@ -160,9 +160,9 @@ all-modules =
 # all-modules = NSCAAgent ;
 
 all-scripts =
-    [ MATCH .*scripts/(.*)/.* : [ glob scripts/* ] ]
+    [ MATCH .*scripts/(.+\\..*) : [ glob scripts/* ] ]
     ;
-
+local all-scripts-lst ;
 if $(toolset) = "msvc" {
 	if ! ( [ bjam/lua.isEnabled ] = true ) {
 		echo "LUA support disabled skipping build of modules..." ;
@@ -193,10 +193,19 @@ if $(toolset) = "msvc" {
 	}
 	for local l in $(all-scripts)
 	{
-		make scripts-$l : scripts/$l : common.copy ;
-		explicit script-$(l) ;
+		#make scripts-$(l) : scripts/$(l) : common.copy ;
+		#explicit scripts/$(l) ;
+
+		#alias scripts-$(l) : scripts/$(l) ;
+		#explicit scripts-$(l) ;
+
+		all-scripts-lst = $(all-scripts-lst) scripts/$(l) ;
+
 		echo "Adding script: $(l)" ;
 	}
+	echo ">>>Done with: $(all-scripts-lst)" ;
+	echo $(all-scripts-lst) ;
+	echo "<<<Done with: $(all-scripts-lst)" ;
 }
 
 all-installers =
@@ -226,8 +235,12 @@ all-helpers = installer_dll ;
 alias all-helpers-targets : $(all-helpers) ;
 explicit all-helpers-targets ;
 
+alias all-scripts-targets : $(all-scripts-lst) ;
+explicit all-scripts-targets ;
+
 alias all-root-targets : $(target) $(target-config) $(target-readme) $(target-license) $(target-changelog) $(target-counters) helpers/systray_helper ;
 explicit all-root-targets ;
+
 alias all-modules-targets : $(all-modules) ;
 explicit all-modules-targets ;
 alias all-installer-targets : $(all-installers) ;
@@ -254,6 +267,11 @@ rule generate-helper-location ( properties * )
 	local tag = [ get-root-prefix $(properties) ] ;
 	return <location>$(BOOST_STAGE_LOCATE)/$(tag)/helpers ;
 }
+rule generate-scripts-location ( properties * )
+{
+	local tag = [ get-root-prefix $(properties) ] ;
+	return <location>$(BOOST_STAGE_LOCATE)/$(tag)/binaries/scripts ;
+}
 rule generate-module-location ( properties * )
 {
 	local tag = [ get-root-prefix $(properties) ] ;
@@ -269,7 +287,12 @@ explicit dist-modules ;
 install dist-helpers : all-helpers-targets : <conditional>@generate-helper-location ;
 explicit dist-helpers ;
 
-alias build-binaries : dist dist-modules dist-helpers ;
+install dist-scripts : all-scripts-targets : <conditional>@generate-scripts-location ;
+explicit dist-scripts ;
+
+
+
+alias build-binaries : dist dist-modules dist-helpers dist-scripts ;
 explicit build-binaries ;
 
 
