@@ -12,6 +12,7 @@ lib $(target)
 	<def-file>$(source).def
 	#<user-interface>gui
 	<runtime-link>static
+	<source>/boost//regexp
 
 	: # default build
 
